--- a/create/index.html
+++ b/create/index.html
@@ -15,28 +15,34 @@
                         Σκοπός του Create είναι να κατανοήσει ο χρήστης όλες τις λειτουργίες που έχουμε εισάγει στην ιστοσελίδα. 
                         Επιπλέον, θέλουμε να παρουσιάσουμε πληροφορίες για το πώς ενσωματώσαμε τις λειτουργίες στην ιστοσελίδα μας.
                     </h4>
-                            <p>
-                            Η ιστοσελίδα μας έχει δημιουργηθεί με γνώμονα την επεκτασιμότητα και τη συντηρησιμότητα. Χρησιμοποιήσαμε HTML. 
-                            Κάθε σελίδα είναι οργανωμένη με ένα καθαρό και δομημένο markup, διευκολύνοντας την προσβασιμότητα και 
-                            τη βελτιστοποίηση για τις μηχανές αναζήτησης (SEO).
-                        </p>
-                        <p>
-                            Για την προσθήκη δυναμικών στοιχείων, χρησιμοποιούμε JavaScript. Με την ανάπτυξη λειτουργιών που 
-                            φορτώνουν δυναμικά CSS και JavaScript αρχεία, μειώσαμε τον όγκο των επαναλαμβανόμενων στοιχείων σε 
-                            κάθε αρχείο HTML. Αυτή η προσέγγιση μας επιτρέπει να ανανεώνουμε κοινά στοιχεία, όπως το header, 
-                            το menu και το footer, με ένα μόνο σημείο ελέγχου.
-                        </p>
-                        <p>
-                            Η χρήση της JavaScript για την φόρτωση αρχείων μόνο όταν είναι απαραίτητο, βελτιώνει την απόδοση 
-                            της ιστοσελίδας μας. Για παράδειγμα, ελέγχουμε την ύπαρξη συγκεκριμένων στοιχείων με IDs ή classes, 
-                            και φορτώνουμε τα σχετικά JavaScript αρχεία μόνο όταν απαιτείται. Αυτό αποτρέπει την περιττή φόρτωση 
-                            κώδικα και βελτιώνει την εμπειρία του χρήστη.
-                        </p>
-                        <p>
-                            Επίσης, για την παρουσίαση του κώδικα, χρησιμοποιούμε βιβλιοθήκες όπως το Prism.js, που διευκολύνει 
-                            την ανάγνωση του κώδικα με χρωματισμό σύνταξης, ενισχύοντας την κατανόηση για τους προγραμματιστές 
-                            που επισκέπτονται την ιστοσελίδα μας.
-                        </p>
+                    <p>
+                        Η ιστοσελίδα μας έχει δημιουργηθεί με γνώμονα την επεκτασιμότητα και τη συντηρησιμότητα. Χρησιμοποιήσαμε HTML. 
+                        Κάθε σελίδα είναι οργανωμένη με ένα καθαρό και δομημένο markup, διευκολύνοντας την προσβασιμότητα και 
+                        τη βελτιστοποίηση για τις μηχανές αναζήτησης (SEO).
+                    </p>
+                    <p>
+                        Για την προσθήκη δυναμικών στοιχείων, χρησιμοποιούμε JavaScript. Με την ανάπτυξη λειτουργιών που 
+                        φορτώνουν δυναμικά CSS και JavaScript αρχεία, μειώσαμε τον όγκο των επαναλαμβανόμενων στοιχείων σε 
+                        κάθε αρχείο HTML. Αυτή η προσέγγιση μας επιτρέπει να ανανεώνουμε κοινά στοιχεία, όπως το header, 
+                        το menu και το footer, με ένα μόνο σημείο ελέγχου.
+                    </p>
+                    <p>
+                        Η χρήση της JavaScript για την φόρτωση αρχείων μόνο όταν είναι απαραίτητο, βελτιώνει την απόδοση 
+                        της ιστοσελίδας μας. Για παράδειγμα, ελέγχουμε την ύπαρξη συγκεκριμένων στοιχείων με IDs ή classes, 
+                        και φορτώνουμε τα σχετικά JavaScript αρχεία μόνο όταν απαιτείται. Αυτό αποτρέπει την περιττή φόρτωση 
+                        κώδικα και βελτιώνει την εμπειρία του χρήστη.
+                    </p>
+                    <p>
+                        Επίσης, για την παρουσίαση του κώδικα, χρησιμοποιούμε βιβλιοθήκες όπως το Prism.js, που διευκολύνει 
+                        την ανάγνωση του κώδικα με χρωματισμό σύνταξης, ενισχύοντας την κατανόηση για τους προγραμματιστές 
+                        που επισκέπτονται την ιστοσελίδα μας.
+                    </p>
+                    <h3 class="highlight_black">Βασική δομή</h3>
+                    <p>
+                        Ο παρακάτω HTML κώδικας που εμφανίζεται αναπαριστά τη βασική δομή μιας ιστοσελίδας "GrCode Club". 
+                        Είναι σχεδιασμένος για να είναι καθαρός και ευανάγνωστος, διευκολύνοντας την κατανόηση της λειτουργικότητας 
+                        και της διάταξης της σελίδας.
+                    </p>
                     <div class="bg_preview">
                         <div class="line-numbers">
                             <pre class="code_editor"><code class="language-html">&lt;html>
